# PyPushGoToMount

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  pyproject.toml
python/pylx200mount/: enums.py  lx200_mount.py
python/pylx200mount/controller/: lx200_command_reponder.py  mount_controller.py
python/pylx200mount/emulation/: emulated_motor_controller.py  emulated_plate_solver.py
python/pylx200mount/motor/: base_motor_controller.py  trajectory.py
python/pylx200mount/my_math/: astropy_util.py
python/pylx200mount/phidgets/: __init__.py  phidgets_motor_controller.py
python/pylx200mount/plate_solver/: base_plate_solver.py  plate_solver.py
python/pypushgotomount/: __init__.py  pushgoto_mount.py
python/pypushgotomount/alignment/: alignment_handler.py
python/pypushgotomount/asi/: asi_interface.py
python/pypushgotomount/controller/: mount_controller.py  utils.py
python/pypushgotomount/emulation/: emulated_plate_solver.py
tests/pylx200mount/: test_lx200_mount.py  test_lx200_mount_with_motors.py
tests/pylx200mount/alignment/: test_alignment_handler.py
tests/pylx200mount/asi/: test_asi_interface.py
tests/pylx200mount/controller/: test_lx200_command_reponder.py  test_mount_controller.py  test_mount_controller_push_to.py
tests/pylx200mount/emulation/: test_emulated_motor_controller.py
tests/pylx200mount/motor/: test_trajectory.py
tests/pylx200mount/phidgets/: test_phidgets_motor_controller.py
tests/pypushgotomount/: test_pushgoto_mount.py  test_pushgoto_mount_with_motors.py
tests/pypushgotomount/alignment/: test_alignment_handler.py
(+12 files in other folders)
