[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPushGoToMount"
description = "PyPushGoToMount"
authors = [
    { name = "Wouter van Reeven", email = "wouter@van.reeven.nl" }
]
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]
dependencies = ["astropy", "Pillow", "jsonschema"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
run_pushgoto_mount = "pypushgotomount.pushgoto_mount:run_pushgoto_mount"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]
